--- a/SpringBootRest/src/main/resources/application.properties
+++ b/SpringBootRest/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-server.port=/*8088*/
-spring.data.mongodb.uri= mongodb+srv://name:password@db-ajsw.e4hoh.mongodb.net/db_access?retryWrites=true&w=majority
+server.port=8088
+spring.data.mongodb.uri= mongodb+srv://daniel:uiopp12-@db-ajsw.e4hoh.mongodb.net/db_access?retryWrites=true&w=majority
 
